--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "15.0.3",
     "react": "^19.0.0-rc-66855b96-20241106",
     "react-dom": "^19.0.0-rc-66855b96-20241106",
+    "sass": "^1.84.0",
     "swiper": "^11.2.0"
   }
 }
