--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mbcculture.by",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.0.3",
-    "react": "^19.0.0-rc-66855b96-20241106",
-    "react-dom": "^19.0.0-rc-66855b96-20241106",
+    "next": "15.2.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "sass": "^1.84.0",
     "swiper": "^11.2.0"
   }
