--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "animate.css": "^4.1.1",
     "next": "15.2.1",
     "react": "19.0.0",
